k8s/superinstance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superinstance
  labels:
    name: superinstance
    environment: production
